# node

./: .editorconfig  .gitignore  .gitmodules  ARKADE_INTEGRATION.md  BITVM_BRIDGE.md  BRIDGE_MVP.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECENTRALIZATION.md  Dockerfile  LICENSE  LIGHTNING_ATOMIC_SWAP.md  MIGRATION_PLONKY3.md  MIGRATION_PLONKY3_SOLUTIONS_RESEARCH.md  MIGRATION_PLONKY3_SPIKE_RESULT.md  MIGRATION_RESEARCH.md  MULTI_ASSET.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  rust-toolchain
.config/: nextest.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release-pr-staging.yaml  auto-release-pr.yaml  ci.yaml  deploy-dev.yaml  deploy-prd.yaml
docs/migration/: PLONKY3_CARRIER_TABLE_AUDIT_SPEC.md  PLONKY3_CUTOVER_PLAYBOOK.md  PLONKY3_FORMAT_MIGRATION.md  PLONKY3_MIGRATION_AUDIT_SUMMARY.md  PLONKY3_UPSTREAM_MAINTENANCE.md
elf/: zkcoins-program
node/: Cargo.toml
node/migrations/: 0001_initial.sql  0003_pending_inscriptions.sql  0004_mmr_root_index.sql  0005_drop_minting_meta_num_pubkeys.sql  0006_inscription_kind.sql  0007_request_log.sql  0008_full_database_trail.sql  0009_schema_polish.sql  0010_schema_polish_round2.sql  0011_reset_accounts_for_num_sends.sql  0012_reset_accounts_for_commitment_public_key.sql  0013_r2_probe_results.sql  0014_jobs.sql  0015_circuit_digest_meta.sql  0015_multi_asset.sql  0016_reset_proof_dependent_state_to_genesis.sql  0017_neutral_multi_asset_account_keys.sql  0018_asset_creators.sql
node/openapi/: README.md  zkcoins.yaml
node/src/: account_node.rs  account_node_tests.rs  audit.rs  audit_tests.rs  db.rs  db_tests.rs  flow.rs  job_dispatcher.rs  job_store.rs  job_store_tests.rs  lib.rs  main.rs  main_tests.rs  openapi.rs  openapi_tests.rs  prover_health.rs  prover_health_tests.rs  publisher.rs  publisher_tests.rs  r2_probe.rs  r2_probe_tests.rs  router.rs  router_tests.rs  runtime.rs  runtime_tests.rs  scanner.rs  scanner_runtime.rs  scanner_tests.rs  scanner_ws.rs  scanner_ws_parse.rs  scanner_ws_parse_tests.rs  scanner_ws_tests.rs  self_heal.rs  self_heal_tests.rs  state.rs  state_tests.rs  test_db.rs  username.rs  username_tests.rs
node/tests/: api_remote.rs  no_chain_hardcodes.rs  openapi_smoke.rs
program/: Cargo.toml
program-plonky2/: CONTRIBUTING.md  Cargo.toml  SESSION_STATE.md  STAGE_5D_NEXT_4_DESIGN.md  STAGE_5D_NEXT_5_AGGREGATOR.md  STEP4_REVIEW.md  STEP7_PREP.md  rust-toolchain.toml
program-plonky2/src/: hash.rs  inputs.rs  lib.rs  types.rs
program-plonky2/src/circuit/: main.rs  mmr.rs  mod.rs  recursion_shape_probe.rs  smt.rs  source_aggregator.rs  util.rs
program-plonky2/src/merkle/: merkle_mountain_range.rs  mod.rs  sparse_merkle_tree.rs
program/src/: lib.rs  main.rs
program/src/merkle/: merkle_mountain_range.rs  mod.rs  sparse_merkle_tree.rs
script/: Cargo.toml  build.rs
script-plonky2/: CONTRIBUTING.md  Cargo.toml  rust-toolchain.toml
script-plonky2/src/: lib.rs
script/src/: lib.rs
scripts/bench/results/: README.md  m5-max-2026-06-02-http-mint-sweep.csv  m5-max-2026-06-02-probe_r2.json  m5-max-vs-m3-ultra-2026-06-02.md  m5me-2026-06-02-probe_r2.json  plonky3-probe-t-real-circuit-m5-max-2026-06-06.md  plonky3-probe-u-e2e-projection-m5-max-2026-06-06.md  plonky3-recursion-reduction-m5-max-2026-06-06.md  plonky3-spike-m5-max-2026-06-06.md  plonky3-vs-plonky2-fair-m5-max-2026-06-06.md
scripts/ci-runner/: README.md  bootstrap-prerequisites.sh
server/: .tmp  Cargo.toml
server/migrations/: 0002_minting_meta.sql
server/src/: account_server.rs  account_server_tests.rs  db.rs  db_tests.rs  lib.rs  main.rs  publisher.rs  publisher_tests.rs  scanner.rs  scanner_runtime.rs  scanner_tests.rs  scanner_ws.rs  scanner_ws_parse.rs  server.rs  server_runtime.rs  server_runtime_tests.rs  server_tests.rs  state.rs  state_tests.rs  username.rs  username_tests.rs
server/tests/: api_remote.rs
shared/: Cargo.toml
shared/src/: commitment.rs  commitment_tests.rs  lib.rs
spikes/plonky3-recursion-spike/: Cargo.toml
spikes/plonky3-recursion-spike/src/: goldilocks_rec.rs  lib.rs
spikes/plonky3-recursion-spike/tests/: probe_a_ivc.rs  probe_aa_sustained_load.rs  probe_ab_recursion_friendly.rs  probe_ac_max_in_coins_sweep.rs  probe_ad_koalabear.rs  probe_ae_best_config.rs  probe_b_fanin.rs  probe_c_vk_binding.rs  probe_d_multilayer_carry.rs  probe_d_pi_threading.rs  probe_e_active_masking.rs  probe_f_vk_binding.rs  probe_g_fanin_pi_passthrough.rs  probe_h_option1_air_public_values.rs  probe_i_cost_projection.rs  probe_j_option2_rebind.rs  probe_l_multi_air.rs  probe_m_long_chain.rs  probe_n_concurrent.rs  probe_o_soundness.rs  probe_p_serialization.rs  probe_q_custom_public_value.rs  probe_r_carrier_chain.rs  probe_r_cost.rs  probe_s_fair_bench.rs  probe_t_real_circuit_bench.rs  probe_v_degree7_bench.rs  probe_w_hiding_fri.rs  probe_x_aggregator_recursion.rs  probe_x_prime_batched_aggregator.rs  probe_y_cold_start.rs  probe_z_verifier.rs
upstream/: README.md
