[workspace]
members = [
    "program-plonky2",
    "script-plonky2",
    "node",
    "shared",
]
resolver = "2"

[workspace.dependencies]
sha2 = "0.10.8"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
blake3 = "1.6.1"
lazy_static = "1.5.0"
bitcoin = { version = "0.32.5", features = ["rand", "rand-std", "serde"] }

[profile.dev]
opt-level = 3

[workspace.package]
version = "1.1.0"
edition = "2021"
