[package]
name = "node"
version.workspace = true
edition.workspace = true

[lints.rust]
# Register the `coverage_nightly` cfg so `#[cfg_attr(coverage_nightly,
# coverage(off))]` annotations in `src/r2_probe.rs` don't trip
# `unexpected_cfgs` under `-D warnings`. `cargo llvm-cov` injects this
# cfg automatically on a nightly toolchain; the lint stays a warn-level
# diagnostic to match `program-plonky2` and `script-plonky2`.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage_nightly)"] }

[dependencies]
bitcoin = { workspace = true }
bitcoin_hashes = { version = "0.16.0", features = ["std"] }
# Drop-in allocator. Plonky2's prove path allocates many polynomial
# and witness buffers across the rayon worker pool; glibc-malloc on
# the Debian-bookworm-slim runtime image is not tuned for that
# pattern. mimalloc consistently outperforms glibc malloc on
# multi-thread alloc-heavy ARM64 workloads. Wired in `main.rs` via
# `#[global_allocator]`; tests, integration tests, and the
# `program-plonky2` / `script-plonky2` library crates keep using the
# system allocator (no behavioural change at the prover circuit
# level). `default-features = false` is defensive — upstream
# (`purpleprotocol/mimalloc_rust`) currently ships `default = []`, so
# this disables nothing today. It pins the opt-in posture for the
# future: if upstream ever turns on `secure`, `debug`, `extended`, or
# a v2 flip via default features, the node binary stays on the small
# portable build until someone opts in deliberately.
mimalloc = { version = "0.1", default-features = false }
sha2 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
hex = "0.4.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "time", "sync"] }
# Event-driven chain ingestion (issue #84): WebSocket subscription to
# the Esplora-compatible block-event stream replaces the previous
# 30-s tip polling loop. `rustls-tls-webpki-roots` keeps the TLS
# stack self-contained on CI hosts (no system openssl), matching the
# `reqwest` features used by `api_remote`.
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
# `StreamExt` / `SinkExt` are used by `scanner_ws` to drive the
# tungstenite stream inside `tokio::time::timeout(...)` on each
# `.next()` call and to send the subscribe frame.
futures-util = "0.3"
# Promoted from `[dev-dependencies]` to `[dependencies]` so the
# scanner can parse the `block` / `blocks` JSON frames returned by
# the Esplora WS endpoint.
serde_json = "1.0"
# Optional ZMQ subscriber path (issue #84, dormant in this PR). When
# `feature = "zmq"` is enabled the operator can plug a Bitcoin Core
# ZMQ stream into the same channel the WebSocket scanner publishes
# on — useful for self-hosters running a node directly. The MVP
# binary keeps this off; no module references the crate yet, so a
# missing system libzmq does not break the default build. Pinned
# with `=` (vs. caret) because the feature is dormant — there is no
# active integration to validate against a SemVer-compatible bump,
# so any version drift should be a deliberate code change with
# review, not a silent `cargo update` side-effect.
bitcoincore-zmq = { version = "=1.5.4", optional = true }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client", branch = "master" }
axum = { version = "0.7.9", features = ["json", "multipart"] }
# `BodyExt::collect()` for the audit middleware's request/response
# body buffering. Promoted from `[dev-dependencies]` because the
# middleware now lives in the production binary.
http-body-util = "0.1"
anyhow = "1.0"
zkcoins-prover = { path = "../script-plonky2/", package = "zkcoins-prover-plonky2" }
zkcoins-program = { path = "../program-plonky2/", package = "zkcoins-program-plonky2" }
shared = { path = "../shared/" }
lazy_static = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "fs"] }
# Postgres state-layer. PR-A1 wires the module + migrations + tests
# only; bootstrap integration happens in PR-A2 + PR-A3 (see the
# `#[allow(dead_code)]` on the module).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    # `json` lets the audit middleware bind `serde_json::Value` directly
    # to the `request_headers` / `response_headers` JSONB columns without
    # a manual `Encode` shim.
    "json",
    # `uuid` lets sqlx encode/decode the `jobs.public_id` column
    # against the `uuid` crate's `Uuid` type directly; without this
    # feature `jobs.public_id` would have to be bound as `Vec<u8>`
    # and parsed by hand.
    "uuid",
    # `chrono` for `TIMESTAMPTZ` round-trip on the `jobs.created_at`
    # / `updated_at` / `completed_at` columns.
    "chrono",
] }
# Structured logging facade. Replaces the legacy `println!` / `eprintln!`
# calls on the API request path so log lines carry an explicit level
# (`info` / `warn` / `error`) instead of relying on the stdout-vs-stderr
# heuristic Alloy / Loki uses to derive `detected_level`. The trigger
# was the post-deploy API E2E negative-path tests producing a burst of
# false `error`-level lines on every `Deploy PRD` run — see PR for the
# call-site survey. Version pinned at workspace root so any future crate
# adopting the partial-migration path picks up the same version.
tracing = { workspace = true }
# `fmt` subscriber for the production binary; `env-filter` lets
# operators tune verbosity via `RUST_LOG` without rebuilding. Kept
# minimal — no JSON output, no telemetry exporter — because the
# operator-facing aggregator (Alloy → Loki) parses the default
# fmt-layer output today.
tracing-subscriber = { workspace = true }
# Used only by the `probe_r2` binary (`src/bin/probe_r2.rs`) for
# `getrusage(RUSAGE_SELF)` to read the process peak RSS at the end of
# the run. No production code path links against this — the main
# binary's resident-set tracking is left to the host OS / cAdvisor.
# Already pulled into the dependency graph transitively (tokio, mio,
# rustls); declared here so the bin target's `unsafe` block resolves
# without leaning on an unstable transitive path.
libc = "0.2"
# Cross-platform host introspection for `r2_probe::detect()` (hostname,
# CPU brand, total RAM, CPU core count). Replaces a previous shape that
# shelled out to `hostname` / `sysctl` on macOS and read
# `/proc/{cpuinfo,meminfo}` on Linux: subprocess- and FS-error arms are
# not deterministically reachable on a healthy CI host, so the 100%
# line/function coverage gate could only be satisfied with
# `#[cfg_attr(coverage_nightly, coverage(off))]` markers on the
# per-platform `_impl` helpers. The `sysinfo` API has a single success
# path (one `Option<String>` for hostname, one `&[Cpu]` slice for CPU
# info, one `u64` for total RAM) so every branch the gate sees is
# reachable from a single `detect()` call. `default-features = false`
# disables `disk`, `network`, `component`, and `user` — `detect()` only
# touches the system / host-name surface, and the disabled features
# pull in `windows` / `objc2-*` crates we don't need on Linux+macOS.
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
# OpenAPI 3.x spec generated from handler annotations + response /
# request types at compile time. utoipa's core crate is web-framework
# agnostic (its only normal deps are `indexmap`, `serde`, `serde_json`,
# `serde_norway`, and `utoipa-gen`), so it composes with the workspace's
# axum 0.7.9 without pulling in `utoipa-axum` — that companion crate
# requires `axum ^0.8` and would force a framework-major bump. The spec
# is built once at startup, cached as JSON in an `OnceLock<String>`,
# and served from `GET /openapi.json`.
utoipa = { version = "5.5", features = ["macros"] }
# Swagger UI assets bundled into the binary. We do NOT enable the
# `axum` feature — that pulls `axum ^0.8` and would force a workspace
# framework-major bump; instead we use the framework-agnostic `serve()`
# entrypoint and route the assets through our existing axum 0.7 handlers
# (see `openapi::swagger_asset_handler`). `vendored` ships a snapshot of
# swagger-ui-dist inside the crate so the build does not shell out to
# `curl` and the binary carries no external CDN dependency at runtime.
utoipa-swagger-ui = { version = "9", default-features = false, features = ["vendored"] }
# UUID generation + sqlx encoding for the `jobs.public_id` column
# (PR1 of the Job-API refactor — migration 0014). `v4` for
# randomly-generated identifiers (no temporal correlation across
# rows); `serde` so the value round-trips through the
# `Json<JobStatusResponse>` and path-parameter extractors without a
# manual encode/decode shim. Also used by `test_db::setup_pool`
# (dev-only) to namespace each test's isolated Postgres schema with
# a UUID-v4 suffix (`t_<uuid_simple>`).
uuid = { version = "1", features = ["v4", "serde"] }
# Concurrent map keyed by `Uuid` → `Arc<tokio::sync::Notify>`. Each
# `send` job that reaches `awaiting_signature` registers an entry so
# the matching `POST /api/jobs/:id/commit` handler can wake the
# dispatcher with `notify_one()`. `DashMap` is the standard sharded
# concurrent-hashmap shape; alternatives (`Mutex<HashMap>`) would
# serialise concurrent notify lookups under one global lock.
dashmap = "6"
# `chrono::DateTime<Utc>` for `TIMESTAMPTZ` round-trip on the
# `jobs.created_at / updated_at / completed_at` columns. The sqlx
# `chrono` feature wires the encoder; the workspace already pulls
# chrono in transitively via the bitcoin / tokio paths.
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
# `async_stream::stream! {}` macro used by `router::build_phase_stream`
# to express the SSE fan-out as a single async block. The alternative
# (`futures_util::stream::unfold`) would force the cross-await state to
# be encoded as a state enum — async-stream's syntactic sugar keeps the
# control flow readable and matches the upstream axum SSE docs. Already
# in the dependency graph transitively (via `tokio-stream` /
# `reqwest`); declared here so the router resolves it deterministically
# rather than through a transitive path that could shift on `cargo
# update`.
async-stream = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# Used by `publisher_tests` for Esplora mocking and by `router_tests`
# to mock the Esplora HTTP endpoint behind the `/health/ready`
# readiness probe so the tests never hit the real
# `https://mutinynet.com/api` from CI.
wiremock = "0.6"
# Shared Postgres 17 container for the test suite. The
# `reusable-containers` feature is load-bearing: it enables
# `with_reuse(ReuseDirective::Always)` so every `cargo nextest`
# test process attaches to the same long-lived container (looked
# up on the daemon by the stable name `zkcoins-test-shared-pg`)
# instead of spawning a fresh one. Without the feature each test
# process spawns its own container (~3 s wall × 220+ tests) and
# the suite regresses to the pre-#181 wall. See
# `node/src/test_db.rs` for the call-site.
testcontainers = { version = "0.27", features = ["reusable-containers"] }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
# HTTP client for the `api_remote` integration test, which exercises
# the deployed DEV node end-to-end. rustls (not native-tls) to keep
# the test runner self-contained on CI hosts without openssl headers.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Random key + suffix generation for the `api_remote` suite so each
# run picks a fresh wallet and avoids collisions with concurrent
# DEV-node consumers.
rand = "0.8"
# Auto-cleaning scratch directories for the ProofStore tests in
# `router_tests`. Replaces the ad-hoc `std::env::temp_dir() + nanos
# + remove_dir_all().ok()` shape — the `TempDir` Drop impl removes
# the directory even when the test panics, so no test leaves a
# leaked /tmp/zkcoins-* tree behind.
tempfile = "3"
# Used by `scanner_ws_tests` to shrink the OS TCP receive buffer on
# the test server socket so a kernel-level backpressure wedge fires
# inside a millisecond-scale test budget instead of needing minutes
# of pings to fill a default-size buffer. `socket2::SockRef`
# provides a safe, cross-platform wrapper around the underlying
# `setsockopt(SO_RCVBUF)` syscall — no unsafe block needed in the
# test fixture. Already a transitive dep via tokio/h2/reqwest, but
# must be declared here to be reachable from test code.
socket2 = "0.5"
# NOTE: `uuid` is also used by `test_db::setup_pool` to namespace
# each test's isolated Postgres schema with a UUID-v4 suffix
# (`t_<uuid_simple>`); the workspace pulls it from the main
# `[dependencies]` block above (where the `v4` + `serde` features
# are already enabled), so no separate dev-dep entry is needed.

[features]
# All non-MVP features are off by default. When a feature is not enabled, the
# corresponding routes, handlers, and supporting modules are excluded from the
# binary at compile time via `#[cfg(feature = "…")]`, so the disabled code
# cannot run, crash, or be exploited at runtime.
default = []
address-list = []
lnurl = []
# Self-host operator opt-in: write path for usernames. Resolve + display
# is part of the MVP and stays on by default — hosted DEV + PRD images
# do not offer claim as a UX policy. With the feature off, the
# `POST /api/username/claim` route, its handler + request type, the
# `db::claim_username` upsert, and the matching `UsernameStore::claim`
# helpers are excluded from the binary at compile time. The
# `Capabilities.username_claim` field is always present in
# `/api/info` so wallet clients can gate their UI on a single
# capability bit without sniffing build flags.
username-claim = []
# Dormant self-host operator opt-in (issue #84). When enabled, a ZMQ
# subscriber publishes block-hash events into the same channel the
# WebSocket scanner uses. No module activates the subscriber in this
# PR; the flag exists so the crate dependency is feature-gated and
# the MVP binary does not require `libzmq`.
zmq = ["dep:bitcoincore-zmq"]
