[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
bitcoin = { workspace = true }
bitcoin_hashes = { version = "0.16.0", features = ["std"] }
sha2 = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
hex = "0.4.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "time"] }
esplora-client = { git = "https://github.com/BitVM/rust-esplora-client", branch = "master" }
axum = { version = "0.7.9", features = ["json", "multipart"] }
anyhow = "1.0"
zkcoins-prover = { path = "../script-plonky2/", package = "zkcoins-prover-plonky2" }
zkcoins-program = { path = "../program-plonky2/", package = "zkcoins-program-plonky2" }
shared = { path = "../shared/" }
lazy_static = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "fs"] }
# Postgres state-layer. PR-A1 wires the module + migrations + tests
# only; bootstrap integration happens in PR-A2 + PR-A3 (see the
# `#[allow(dead_code)]` on the module).
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1.0"
# Used by `publisher_tests` for Esplora mocking and by `server_tests`
# to mock the Esplora HTTP endpoint behind the `/health/ready`
# readiness probe so the tests never hit the real
# `https://mutinynet.com/api` from CI.
wiremock = "0.6"
# Used by `db_tests` to spin up a real Postgres 17 per test run.
# The legacy `clients::Cli` of v0.14/0.15 was replaced by a global
# `runner()` — see `db_tests::setup_pool` for the shape we use.
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[features]
# All non-MVP features are off by default. When a feature is not enabled, the
# corresponding routes, handlers, and supporting modules are excluded from the
# binary at compile time via `#[cfg(feature = "…")]`, so the disabled code
# cannot run, crash, or be exploited at runtime.
default = []
address-list = []
faucet = []
usernames = []
lnurl = ["usernames"]
